k8s/apps/github-readme-stats/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: github-readme-stats
        app.kubernetes.io/name: github-readme-stats
    name: github-readme-stats
    namespace: github-readme-stats
spec:
    ports:
        - port: 80
          protocol: TCP
          targetPort: 9000
    selector:
        app: github-readme-stats
        app.kubernetes.io/name: github-readme-stats
    type: ClusterIP

---
